@@ -1,6 +1,0 @@
-#%PAM-1.0
-auth       required	pam_unix.so
-account    required	pam_unix.so 
-#password   required	pam_cracklib.so
-#password   required	pam_unix.so use_authtok
-session    required	pam_unix.so 
